force-app/main/default/objects/Apttus_Config2__ConstraintRuleAction__c/Apttus_Config2__ConstraintRuleAction__c.object-meta.xml
<CustomObject>
    <description>Captures information about rule actions. Rule actions are applied only when the rule conditions are satisfied.</description>
    <label>Constraint Rule Action</label>
    <nameField>
        <label>Constraint Rule Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Constraint Rule Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>