force-app/main/default/objects/Apttus_Config2__ConstraintRuleAction__c/fields/Apttus_Config2__MatchInAsset__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__MatchInAsset__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether to match the product in asset record</description>
    <label>Match In Asset</label>
    <type>Checkbox</type>
</CustomField>