force-app/main/default/objects/Apttus_Config2__ConstraintRuleAction__c/fields/Apttus_Config2__MatchInPrimaryLines__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__MatchInPrimaryLines__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether to match the product among the products added as primary lines in the shopping cart.</description>
    <label>Match In Primary Lines</label>
    <type>Checkbox</type>
</CustomField>